--- a/WpfHW9/Dictionary1.xaml
+++ b/WpfHW9/Dictionary1.xaml
@@ -3,7 +3,7 @@
     xmlns:col="clr-namespace:System.Collections;assembly=mscorlib"
         xmlns:sys="clr-namespace:System;assembly=mscorlib">
     
-    <col:ArrayList x:Key="FontStyles1">
+    <!--<col:ArrayList x:Key="FontStyles1">
         <sys:String>Arial</sys:String>
         <sys:String>Times New Roman</sys:String>
         <sys:String>Verdana</sys:String>
@@ -12,5 +12,5 @@
         <sys:String>12</sys:String>
         <sys:String>14</sys:String>
         <sys:String>16</sys:String>
-    </col:ArrayList>
+    </col:ArrayList>-->
 </ResourceDictionary>
