--- a/WpfHW9/MainWindow.xaml
+++ b/WpfHW9/MainWindow.xaml
@@ -6,7 +6,6 @@
         xmlns:local="clr-namespace:WpfHW9"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800" Style="{DynamicResource WindowStyle}">
-
     <Window.CommandBindings>
         <CommandBinding Command="Close" Executed="ExitExecuted"/>
         <CommandBinding Command="Open" Executed="OpenExecuted"/>
@@ -34,9 +33,15 @@
         </Menu>
         <ToolBarTray Grid.Row="1" Style="{DynamicResource ToolBarTrayStyle}">
             <ToolBar Grid.Row="1" Margin="5" Padding="5" Style="{DynamicResource ToolBarStyle}" >
-                <ComboBox Margin="5" Padding="5" SelectedIndex="0" Width="200" ItemsSource="{StaticResource FontStyles1}" SelectionChanged="ComboBox_SelectionChanged">
+                <ComboBox Name="ComboFontStyle"  Margin="5" Padding="5" Width="200" SelectedIndex="0">
+                    <ComboBoxItem Tag="Arial">Arial</ComboBoxItem>
+                    <ComboBoxItem Tag="TimesNewRoman">Times New Roman</ComboBoxItem>
+                    <ComboBoxItem Tag="Verdana">Verdana</ComboBoxItem>
                 </ComboBox>
-                <ComboBox Margin="5" Padding="5" SelectedIndex="2" Width="50" ItemsSource="{StaticResource FontSizes1}" SelectionChanged="ComboBox_SelectionChanged_1">
+                <ComboBox Name="ComboFontSize" Margin="5" Padding="5" Width="50" SelectedIndex="2">
+                    <ComboBoxItem Tag="12">12</ComboBoxItem>
+                    <ComboBoxItem Tag="14">14</ComboBoxItem>
+                    <ComboBoxItem Tag="16">16</ComboBoxItem>
                 </ComboBox>
                 <ToolBar Margin="5" Padding="5" Style="{DynamicResource ToolBarStyle}">
                     <Button Click="Button_Click" Style="{DynamicResource ButtonStyle}">
@@ -54,12 +59,13 @@
                 </ToolBar>
                 <ToolBar Margin="5" Padding="5" Style="{DynamicResource ToolBarStyle}">
                     <StackPanel VerticalAlignment="Center">
-                        <RadioButton Content="Черный" IsChecked="True" Checked="RadioButton_Checked" Style="{DynamicResource RadioButtonStyle}"/>
-                        <RadioButton Content="Красный" Checked="RadioButton_Checked_1" Style="{DynamicResource RadioButtonStyle}"/>
+                        <RadioButton Tag="Black" Content="Черный" IsChecked="True" Style="{DynamicResource RadioButtonStyle}" />
+                        <RadioButton Tag="Red" Content="Красный" Style="{DynamicResource RadioButtonStyle}" />
                     </StackPanel>
                 </ToolBar>
             </ToolBar>
         </ToolBarTray>
-        <TextBox x:Name="textBox" Grid.Row="2" Margin="5" Padding="5" FontSize="16" FontFamily="Arial" TextWrapping="Wrap" Style="{DynamicResource TextBoxStyle}"/>
+        <TextBox x:Name="textBox" Grid.Row="2" Margin="5" Padding="5" TextWrapping="Wrap"
+                 Style="{DynamicResource TextBoxStyle}" FontFamily="{Binding ElementName=ComboFontStyle, Path=SelectedItem.Tag}" FontSize="{Binding ElementName=ComboFontSize, Path=SelectedItem.Tag}"/>
     </Grid>
 </Window>
